pipeline/sonarqube/sonarqube-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2020-12-02T12:48:24Z"
  labels:
    app: sonarqube
    app.kubernetes.io/component: sonarqube
    app.kubernetes.io/instance: sonarqube
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:openshift.io/generated-by: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":9000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:deployment: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: oc
    operation: Update
    time: "2020-12-02T12:48:24Z"
  name: sonarqube
  namespace: user15-sonarqube
  resourceVersion: "3374222"
  selfLink: /api/v1/namespaces/user15-sonarqube/services/sonarqube
  uid: 66e219d9-38b4-4905-a592-3e292ad60e07
spec:
  clusterIP: 172.30.199.22
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    deployment: sonarqube
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
